--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="swipe_red">#F44336</color>
+    <color name="restore_blue">#1E8EE7</color>
 </resources>
