add note editor

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -24,8 +24,7 @@
         tools:layout="@layout/fragment_note_details">
         <argument
             android:name="noteId"
-            app:argType="long"
-            android:defaultValue="-1L" />
+            app:argType="long" />
     </fragment>
 
     <fragment
