--- a/app/src/main/res/layout/fragment_note_details.xml
+++ b/app/src/main/res/layout/fragment_note_details.xml
@@ -1,36 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
         <import type="android.view.View" />
 
         <variable
-            name="note"
+            name="viewModel"
             type="ru.modemastudio.notepro.ui.note_details.NoteDetailsViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingHorizontal="6dp">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/noteDetailsTop"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/noteDetailsBottom"/>
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/noteDetailsBottom"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/noteDetailsTop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </ScrollView>
+
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/noteDetailsTop"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:fillViewport="true"
+            android:visibility="@{viewModel.isEditorVisible ? View.VISIBLE : View.GONE}">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/noteDetailsBottom"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:text="@={viewModel.note.body}"/>
+        </ScrollView>
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="@{viewModel.isEditorVisible ? View.VISIBLE : View.GONE}">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/noteDetailsFeaturesLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </HorizontalScrollView>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
