--- a/app/src/main/res/layout/fragment_note_details.xml
+++ b/app/src/main/res/layout/fragment_note_details.xml
@@ -23,7 +23,8 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/noteDetailsTop"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textColor="?colorOnPrimary" />
         </ScrollView>
 
         <ScrollView
@@ -37,7 +38,9 @@
                 android:id="@+id/noteDetailsBottom"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:text="@={viewModel.note.body}"/>
+                android:text="@={viewModel.note.body}"
+                android:backgroundTint="?colorOnPrimary"
+                android:textColor="?colorOnPrimary" />
         </ScrollView>
 
         <HorizontalScrollView
