--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,14 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+
     <style name="Theme.Notepro" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_base</item>
         <item name="colorPrimaryVariant">?colorPrimary</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
+        <item name="android:textColorPrimary">?colorOnPrimary</item>
 
-        <!-- Status bar color. -->
+        <item name="android:windowBackground">?colorPrimary</item>
+        <item name="colorOnBackground">?colorOnPrimary</item>
+
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="materialAlertDialogTheme">@style/AlertDialog</item>
     </style>
 </resources>
